feat: increase '<type>!:'  as breaking change trigger

--- a/mkver.conf
+++ b/mkver.conf
@@ -36,7 +36,7 @@ patches: [
 commitMessageActions: [
   {
     # pattern is a regular expression to occur in a single line
-    pattern: "BREAKING CHANGE"
+    pattern: "((BREAKING CHANGE)|.+!:).+"
     # action is one of:
     # * Fail - application will exit
     # * IncrementMajor - bump the major version
